051 - Fix overflow in index and about pages

--- a/styles/components/section.css
+++ b/styles/components/section.css
@@ -19,6 +19,7 @@
 
     position: absolute;
     top: -40px;
+    right: 0px;
   }
 
   .title-wrapper {
