--- a/styles/pages/hamburguer.css
+++ b/styles/pages/hamburguer.css
@@ -1,3 +1,7 @@
+.hero {
+  overflow: hidden;
+}
+
 .hamburguer {
   background-image: url(../../assets/icons/path3.svg);
   background-repeat: no-repeat;
